RESOLVED FIXED111274
[EFL] Fix build issues to enable CSS Filter and Shaders support.
https://bugs.webkit.org/show_bug.cgi?id=111274
Summary [EFL] Fix build issues to enable CSS Filter and Shaders support.
Kalyan
Reported 2013-03-03 12:26:23 PST
Currently support for CSS Filters, Shaders and Composition is disabled during compile time. This is to fix any compile time issues with EFL port and enable flags by default during compile time.
Attachments
WIP (5.75 KB, patch)
2013-03-03 13:23 PST, Kalyan
no flags
compilelog (133.47 KB, text/plain)
2013-03-03 13:25 PST, Kalyan
no flags
patchv2 (12.09 KB, patch)
2013-03-21 12:45 PDT, Kalyan
no flags
patchv3 (11.98 KB, patch)
2013-03-22 05:24 PDT, Kalyan
no flags
patchv4 (3.62 KB, patch)
2013-03-22 09:29 PDT, Kalyan
no flags
patchv5 (4.16 KB, patch)
2013-03-22 09:55 PDT, Kalyan
no flags
Kalyan
Comment 1 2013-03-03 13:23:14 PST
Kalyan
Comment 2 2013-03-03 13:25:27 PST
Created attachment 191141 [details] compilelog
Kalyan
Comment 3 2013-03-03 13:28:36 PST
For some reason I needed to change the order of Header inclusion in GraphicsContext3DEfl and TransportSurface (can be seen from the patch). Without these changes I get a compile error(can be seen from compilelog). Still trying to figure out the reason for it.
Kalyan
Comment 4 2013-03-04 00:36:43 PST
After discussing with Sudarshan, conclusion was to enable both compile and run time support together with tests. This patch should deal with any changes needed in code for compiling with the flags enabled. After this lands, compile time + run time enablers along with test expectations should be followed up in another patch.
Kalyan
Comment 5 2013-03-21 12:45:12 PDT
Kalyan
Comment 6 2013-03-22 05:24:48 PDT
Kalyan
Comment 7 2013-03-22 09:29:22 PDT
Kalyan
Comment 8 2013-03-22 09:55:45 PDT
Created attachment 194576 [details] patchv5 Missing change in TextureMapperShaderProgram
Kalyan
Comment 9 2013-03-22 10:25:30 PDT
These changes where needed to compile successfully, with CSS Filter and Shader flag enabled. I completely don't understand the reason behind this. Compilation error can be found in the compile log.
Noam Rosenthal
Comment 10 2013-03-22 10:33:19 PDT
(In reply to comment #9) > These changes where needed to compile successfully, with CSS Filter and Shader flag enabled. I completely don't understand the reason behind this. Compilation error can be found in the compile log. Looks like some header EFL is including has #define ShaderResource or something like that.
Kalyan
Comment 11 2013-03-22 11:30:49 PDT
(In reply to comment #10) > (In reply to comment #9) > > These changes where needed to compile successfully, with CSS Filter and Shader flag enabled. I completely don't understand the reason behind this. Compilation error can be found in the compile log. > > Looks like some header EFL is including has #define ShaderResource or something like that. Ha k, GLTransportSurface includes TextureMapperShaderProgram.h, which includes TextureMapperGL.h, which in turn included FilterOperations.h and this seems to cause the issue.
WebKit Review Bot
Comment 12 2013-03-22 12:26:11 PDT
Comment on attachment 194576 [details] patchv5 Clearing flags on attachment: 194576 Committed r146640: <http://trac.webkit.org/changeset/146640>
WebKit Review Bot
Comment 13 2013-03-22 12:26:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.