[EFL] Fix build issues to enable CSS Filter and Shaders support. https://bugs.webkit.org/show_bug.cgi?id=111274

Patch by Kondapally Kalyan <kalyan.kondapally@intel.com> on 2013-03-22
Reviewed by Noam Rosenthal.

This is in preperation to enable CSS Filter and Shaders support.
This patch fixes related build issues to enable the support.

* platform/graphics/surfaces/efl/GLTransportSurface.cpp:
* platform/graphics/texmap/TextureMapper.cpp:
* platform/graphics/texmap/TextureMapper.h:
(WebCore):
* platform/graphics/texmap/TextureMapperGL.cpp:
* platform/graphics/texmap/TextureMapperGL.h:
(WebCore):
* platform/graphics/texmap/TextureMapperShaderProgram.h:

Canonical link: https://commits.webkit.org/131413@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146640 268f45cc-cd09-0410-ab3c-d52691b4dbfc